<resources>
    <string name="app_name">SoccerTeams</string>
    <string name="real_madrid">REAL MADRID :</string>
    <string name="home">HOME</string>
    <string name="news">NEWS</string>
    <string name="players">PLAYERS</string>
    <string name="team">TEAM</string>
    <string name="tour_and_museum">TOUR AND MUSEUM</string>
    <string name="tickets">TICKETS</string>
    <string name="shop">SHOP</string>
    <string name="recent">RECENT</string>
    <string name="games">GAMES</string>
    <string name="about">ABOUT</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
